--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Mississippi River -- Juvenile fiction'
 - !lcsh 'Yachts -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Up the River; or, Yachting on the Mississippi
 url: http://www.gutenberg.org/ebooks/24775
